--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,12 +1,7 @@
-spring.application.name=demo
-spring.datasource.url=jdbc:postgresql://localhost:5432/controle_usuario
-spring.datasource.username=postgres
-spring.datasource.password=password
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/locadora?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
 
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-
-springdoc.api-docs.enabled=true
-springdoc.swagger-ui.enabled=true
-
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
