--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,7 +1,14 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/locadora?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=
+spring.application.name=demo
+spring.datasource.url=jdbc:postgresql://db.znsulwwwikuyimdklmgw.supabase.co:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=l5ljn9JX51szdGrE
+spring.datasource.driver-class-name=org.postgresql.Driver
 
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+
